--- a/src/app/pages/dashboard/manage-collection/manage-collection.component.html
+++ b/src/app/pages/dashboard/manage-collection/manage-collection.component.html
@@ -1,5 +1,5 @@
 <div class="manage-collection-wrapper container-fluid d-flex flex-column">
-    <label class="fs-3 ps-3 mb-5">Manage Collection</label>
+    <label class="fs-3 ps-3 mb-5" [ngStyle]="{'font-family': 'app_font'}">Manage Collection</label>
     <div class="row px-3 pe-5 mb-auto">
         <div class="col-md-6 col-sm-12 text-center mb-5">
             <div class="text-center my-auto mb-3">
@@ -11,7 +11,7 @@
                     </div>
                 </div>
             </div>
-            <label class="fw-bold">Money Collected</label>
+            <label class="fw-bold" [ngStyle]="{'font-family': 'app_font'}">Money Collected</label>
         </div>
         <div class="col-md-6 col-sm-12 mb-5">
             <div class="card border-0 bg-white shadow">
