--- a/src/app/pages/dashboard/manage-list-reward/manage-list-reward.component.scss
+++ b/src/app/pages/dashboard/manage-list-reward/manage-list-reward.component.scss
@@ -23,3 +23,12 @@
         }
     }
 }
+.info {
+    p {
+        font-family: app_font;
+        padding-left: 20px;
+    }
+    label {
+        padding-left: 20px;
+    }
+}
