--- a/src/app/pages/dashboard/manage-merchant/manage-merchant.component.html
+++ b/src/app/pages/dashboard/manage-merchant/manage-merchant.component.html
@@ -1,6 +1,6 @@
 <div class="merchant-wrapper d-flex flex-column">
     <div class="row p-0 m-0 px-5 mb-auto">
-        <label class="fs-3 me-auto ps-0 mb-3">Manage Merchant</label>
+        <label class="fs-3 me-auto ps-0 mb-3" [ngStyle]="{'font-family': 'app_font'}">Manage Merchant</label>
         <div class="merchant-table-wrapper p-0">
             <table class="table merchant-table">
                 <thead>
