--- a/src/app/pages/dashboard/manage-user/manage-user.component.html
+++ b/src/app/pages/dashboard/manage-user/manage-user.component.html
@@ -1,5 +1,5 @@
 <div class="manage-user-wrapper container-fluid">
-    <label class="fs-3 ps-3 mb-3">Manage Users</label>
+    <label class="fs-3 ps-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Manage Users</label>
     <div class="row px-3 pe-5">
         <div class="col-md-5 col-sm-12">
             <div class="card border-0 shadow">
