--- a/src/app/pages/merchant/artwork/home/home.component.html
+++ b/src/app/pages/merchant/artwork/home/home.component.html
@@ -30,12 +30,12 @@
     </div>
     <div class="col-md-4 col-xs-12">
         <div class="card text-center py-0 rounded-4 border-0 shadow my-0">
-            <div class="card-header bg-white border-0 py-4">
+            <div class="card-header bg-white border-0 py-4"  [ngStyle]="{'font-family': 'app_font'}">
                 Reward NFT Artwork*
             </div>
             <div class="card-body p-0">
                 <div class="alert alert-odd rounded-0 border-0 text-center collection-detail-alert mb-0" role="alert">
-                    <div class="info text-secondary fw-900">
+                    <div class="info text-secondary fw-500">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque unde molestiae iusto quaerat
                         illo rerum, tempora dicta corporis cupiditate necessitatibus magnam
                     </div>
