--- a/src/app/pages/dashboard/manage-redeem-now/manage-redeem-now.component.html
+++ b/src/app/pages/dashboard/manage-redeem-now/manage-redeem-now.component.html
@@ -1,10 +1,10 @@
 <div class="manage-reward-wrapper container-fluid d-flex flex-column">
-    <label class="fs-3 ps-3 mb-5">Redeem Rewards</label>
+    <label class="fs-3 ps-3 mb-5" [ngStyle]="{'font-family': 'app_font'}">Redeem Rewards</label>
     <div class="row mb-auto">
         <div class="col-md-3 col-lg-3 col-sm-1 col-xs-12"></div>
         <div class="col-md-6 col-lg-6 col-sm-7 col-xs-12 mx-auto ">
             <div class="card border-0 rounded-4 py-3 d-flex flex-column">
-                <div class="text-center text-white mx-auto fs-4 py-3" [ngStyle]="{'word-break' : 'break-word', 'width.%' : 35, 'line-height' : 1}">
+                <div class="text-center text-white mx-auto fs-4 py-3" [ngStyle]="{'word-break' : 'break-word', 'width.%' : 35, 'line-height' : 1, 'font-family': 'app_font'}">
                     Free Icecream for a Month
                 </div>
                 <div class="item-image mx-auto mb-auto">
