--- a/src/app/pages/dashboard/manage-reward/manage-reward.component.html
+++ b/src/app/pages/dashboard/manage-reward/manage-reward.component.html
@@ -1,5 +1,5 @@
 <div class="manage-reward-wrapper container-fluid d-flex flex-column">
-    <label class="fs-3 ps-3 mb-5">Manage Rewards</label>
+    <label class="fs-3 ps-3 mb-5" [ngStyle]="{'font-family': 'app_font'}">Manage Rewards</label>
     <div class="row px-3 pe-5 mb-auto">
         <div class="col-md-12">
             <div class="table-wrapper p-0">
