--- a/src/app/pages/dashboard/manage-user/manage-user.component.scss
+++ b/src/app/pages/dashboard/manage-user/manage-user.component.scss
@@ -32,3 +32,7 @@ ng-scrollbar {
         box-shadow: none;
     }
 }
+.form-check-input {
+    background-color: #23C062;
+    border-color: #23C062;
+}
