--- a/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
+++ b/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-wrapper ps-2">
 
     <div class="row p-0 m-0 pe-5">
-        <label class="fs-3 mb-3">Collection Performance</label>
+        <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Collection Performance</label>
         <div class="col-md-4 col-sm-12 mb-3">
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body">
@@ -37,7 +37,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_1.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold">
+                        <div class="fw-bold fs-5">
                             Reward Name
                         </div>
                         <div class="item-title rounded-pill px-3 btn-main-bg text-white py-2"
@@ -50,7 +50,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_2.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold">
+                        <div class="fw-bold fs-5">
                             Reward Name
                         </div>
                         <div class="rounded-pill px-3 btn-main-bg text-white py-2" [ngStyle]="{'font-size.px': 8}">
@@ -64,7 +64,7 @@
     <div class="row p-0 m-0 pe-5">
         <div class="col-md-8 col-sm-12 mb-3">
             <div class="d-flex justify-content-between align-items-center" [ngStyle]="{'height.px' : 60}">
-                <label class="fs-3 me-auto">Pending Approval</label>
+                <label class="fs-3 me-auto" [ngStyle]="{'font-family': 'app_font'}">Pending Approval</label>
                 <div class="d-flex justify-content-center">
                     <app-arrow-button class="me-2" [isLeft]="true"></app-arrow-button>
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60}">List Rewards <span class="text-muted d-block"
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span class="text-muted d-block"
                     [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body d-flex flex-column justify-content-center">
@@ -116,7 +116,7 @@
                         <div class="list-item-image">
                             <img src="assets/img/project/dashboard/list_reward_1.png" class="img-fluid" />
                         </div>
-                        <div class="ms-3 fw-bold">
+                        <div class="ms-3 fs-5 fw-bold">
                             Reward Name
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                         <div class="list-item-image">
                             <img src="assets/img/project/dashboard/list_reward_2.png" class="img-fluid" />
                         </div>
-                        <div class="ms-3 fw-bold">
+                        <div class="ms-3 fs-5 fw-bold">
                             Reward Name
                         </div>
                     </div>
