--- a/src/app/pages/dashboard/user-portal/user-portal.component.html
+++ b/src/app/pages/dashboard/user-portal/user-portal.component.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60}">Redeemed Rewards</label>
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">Redeemed Rewards</label>
             <div class="card h-100 top-card border-0 rounded-4">
                 <div class="card-body d-flex flex-column justify-content-center ">
                     <div
@@ -56,7 +56,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_1.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold">
+                        <div class="fw-bold fs-5">
                             Reward Name
                         </div>
                         <div class="item-title rounded-pill px-3 btn-main-bg text-white py-2"
@@ -69,7 +69,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_2.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold">
+                        <div class="fw-bold fs-5">
                             Reward Name
                         </div>
                         <div class="rounded-pill px-3 btn-main-bg text-white py-2" [ngStyle]="{'font-size.px': 8}">
@@ -114,7 +114,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60}">List Rewards <span class="text-muted d-block"
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span class="text-muted d-block"
                     [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body d-flex flex-column justify-content-center ">
@@ -123,7 +123,7 @@
                         <div class="list-item-image">
                             <img src="assets/img/project/dashboard/list_reward_1.png" class="img-fluid" />
                         </div>
-                        <div class="ms-3 fw-bold">
+                        <div class="ms-3 fw-bold fs-5">
                             Reward Name
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                         <div class="list-item-image">
                             <img src="assets/img/project/dashboard/list_reward_2.png" class="img-fluid" />
                         </div>
-                        <div class="ms-3 fw-bold">
+                        <div class="ms-3 fw-bold fs-5">
                             Reward Name
                         </div>
                     </div>
