--- a/src/app/pages/merchant/artwork/auto-artists/auto-artists.component.scss
+++ b/src/app/pages/merchant/artwork/auto-artists/auto-artists.component.scss
@@ -35,3 +35,7 @@ input[type="text"] {
     border: 1px solid var(--main-color);
     color: black;
 }
+
+.alert-odd {
+    background-color: #e7e7e7 !important;
+}
