implement search-input and fix shadow

--- a/src/app/pages/dashboard/manage-merchant/manage-merchant.component.scss
+++ b/src/app/pages/dashboard/manage-merchant/manage-merchant.component.scss
@@ -52,6 +52,10 @@
             vertical-align: middle;
         }
     }
+    .action-btn {
+        box-shadow: 0 3px 4px rgb(0 0 0 / 20%) !important;
+        margin-right: 8px;
+    }
 }
 
 .action-btn {
