--- a/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
+++ b/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
@@ -2,7 +2,7 @@
 
     <div class="row p-0 m-0 pe-5">
         <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Collection Performance</label>
-        <div class="col-md-4 col-sm-12 mb-3">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body">
                     <label class="mb-3">Percentage Collected</label>
@@ -14,21 +14,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-12 mb-3">
-            <div class="card top-card border-0 rounded-4">
-                <div class="card-body">
-                    <label>Daily Sales This Week</label>
-                    <div class="mb-3">
-                        <apx-chart [series]="chartOptions.series!" [chart]="chartOptions.chart!"
-                            [dataLabels]="chartOptions.dataLabels!" [plotOptions]="chartOptions.plotOptions!"
-                            [yaxis]="chartOptions.yaxis!" [legend]="chartOptions.legend!" [fill]="chartOptions.fill!"
-                            [stroke]="chartOptions.stroke!" [tooltip]="chartOptions.tooltip!"
-                            [xaxis]="chartOptions.xaxis!"></apx-chart>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-12 mb-3">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3 component-redeem-reward">
             <div class="card h-100 top-card border-0 rounded-4">
                 <div class="card-body">
                     <label class="mb-3">Redeemed Rewards</label>
@@ -60,9 +46,23 @@
                 </div>
             </div>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 mb-3 component-daily-sales">
+            <div class="card top-card border-0 rounded-4">
+                <div class="card-body">
+                    <label>Daily Sales This Week</label>
+                    <div class="mb-3">
+                        <apx-chart [series]="chartOptions.series!" [chart]="chartOptions.chart!"
+                            [dataLabels]="chartOptions.dataLabels!" [plotOptions]="chartOptions.plotOptions!"
+                            [yaxis]="chartOptions.yaxis!" [legend]="chartOptions.legend!" [fill]="chartOptions.fill!"
+                            [stroke]="chartOptions.stroke!" [tooltip]="chartOptions.tooltip!"
+                            [xaxis]="chartOptions.xaxis!"></apx-chart>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row p-0 m-0 pe-5">
-        <div class="col-md-8 col-sm-12 mb-3">
+        <div class="col-sm-12 col-lg-8 mb-3">
             <div class="d-flex justify-content-between align-items-center" [ngStyle]="{'height.px' : 60}">
                 <label class="fs-3 me-auto" [ngStyle]="{'font-family': 'app_font'}">Pending Approval</label>
                 <div class="d-flex justify-content-center">
@@ -70,10 +70,10 @@
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-3 mb-3 g-5">
+            <div class="row row-cols-1 row-cols-sm-3 mb-3 g-5">
                 <div class="col mb-3">
                     <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                        <div class="pt-3 text-center">
                             <img src="assets/img/project/dashboard/home/collection_1.png" class="collection-img" />
                         </div>
                         <div
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col mb-3">
                     <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                        <div class="pt-3 text-center">
                             <img src="assets/img/project/dashboard/home/collection_2.png" class="collection-img" />
                         </div>
                         <div
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col mb-3">
                     <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="px-3 pt-3">
+                        <div class="pt-3 text-center">
                             <img src="assets/img/project/dashboard/home/collection_3.png" class="collection-img" />
                         </div>
                         <div
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-12 mb-3">
+        <div class="col-sm-12 col-lg-4 mb-3">
             <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span class="text-muted d-block"
                     [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
