update forgot password page

--- a/src/app/pages/auth/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/auth/auth/forgot-password/forgot-password.component.scss
@@ -2,3 +2,13 @@
   max-width: 350px;
   width: 100%;
 }
+* {
+  color: black;
+}
+input {
+  box-shadow: 2px 3px 1px #282828, white 2px 1px 1px inset;
+}
+input:focus {
+  border-color: #ced4da!important;
+  box-shadow: 2px 3px 1px #282828, white 2px 1px 1px inset;
+}
