--- a/src/app/pages/auth/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/auth/forgot-password/forgot-password.component.html
@@ -1,38 +1,23 @@
-<div class="text-center text-primary mb-4">
-  <div class="h2 fw-normal mb-0">{{ 'FORGOT_YOUR_PWD' | translate }}</div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <div class="wrapper">
-
-    <!-- NOTE Login form -->
-    <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit()">
-
-      <!-- NOTE Email -->
-      <div class="mb-3">
-        <label for="email" class="form-label text-start w-100">{{ 'EMAIL' | translate }}</label>
-        <input type="email" class="form-control" id="email"
-          formControlName="email"
-          [ngClass]="{ 'is-invalid' : formGroup.controls.email.errors && formGroup.controls.email.touched }">
-        <!-- NOTE Errors -->
-        <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('required')">
-          {{ 'FIELD_REQUIRED' | translate }}
-        </div>
-        <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('email')">
-          {{ 'FIELD_EMAIL' | translate }}
-        </div>
+<div class="d-flex flex-column justify-content-center h-100">
+  <div class="fs-2 fw-500 mx-auto mb-5" [ngStyle]="{'margin-top.rem' : -10}">{{ 'FORGOT_YOUR_PWD' | translate }}</div>
+  <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit()">
+    <div class="mx-auto mb-4 input-group position-relative" [ngStyle]="{'width.rem' : 25}">
+      <input type="text" formControlName="email" class="form-control rounded-pill" placeholder="Email Address"
+        [ngClass]="{ 'is-invalid' : formGroup.controls.email.errors && formGroup.controls.email.touched }" [ngStyle]="{'height.rem' : 3}">
+      <!-- NOTE Errors -->
+      <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('required')">
+        {{ 'FIELD_REQUIRED' | translate }}
       </div>
-
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary px-5" [disabled]="!formGroup.valid">
-          {{ 'RESET_PASSWORD' | translate }}
-        </button>
+      <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('email')">
+        {{ 'FIELD_EMAIL' | translate }}
       </div>
-
-      <div class="text-center my-3">
-        <a routerLink="/auth/login">{{ 'BACK_TO_LOGIN' | translate }}</a>
-      </div>
-
-    </form>
-  </div>
+    </div>
+    <div class="mx-auto mb-4" [ngStyle]="{'width.rem' : 13}">
+      <app-custom-button [text]="'RESET_PASSWORD' | translate">
+      </app-custom-button>
+    </div>
+    <div class="text-center my-3">
+      <a routerLink="/auth/login" class="text-decoration-none text-secondary fw-bold">{{ 'BACK_TO_LOGIN' | translate }}</a>
+    </div>
+  </form>
 </div>
