--- a/src/app/pages/auth/auth/login/login.component.html
+++ b/src/app/pages/auth/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column justify-content-center h-100">
   <div class="fs-2 fw-500 mx-auto mb-5" [ngStyle]="{'margin-top.rem' : -10}">Gain Access</div>
   <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit($event)">
-    <div class="mx-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
-      <input type="text" formControlName="email" class="form-control rounded-pill" placeholder="Email Address"
+    <div class="mx-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 25}">
+      <input type="text" formControlName="email" class="form-control rounded-pill" [ngStyle]="{'height.rem' : 3}" placeholder="Email Address"
         [ngClass]="{ 'is-invalid' : formGroup.controls.email.errors && formGroup.controls.email.touched }">
       <!-- NOTE Errors -->
       <div class="invalid-feedback" *ngIf="formGroup.controls.email.hasError('required')">
@@ -12,10 +12,12 @@
         {{ 'FIELD_EMAIL' | translate }}
       </div>
     </div>
-    <div class="mx-auto mb-4 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
-      <input type="password" formControlName="password" class="form-control rounded-pill" placeholder="Password"
+    <div class="mx-auto mb-4 input-group position-relative" [ngStyle]="{'width.rem' : 25}">
+      <input [type]="isShowPassword ? 'text' : 'password'" formControlName="password" class="form-control rounded-pill" [ngStyle]="{'height.rem' : 3}" placeholder="Password"
       [ngClass]="{ 'is-invalid' : formGroup.controls.password.errors && formGroup.controls.password.touched }">
-      <img class="addon-img" src="assets/img/project/password_addon.png" height="18" />
+      <!-- <img class="addon-img" src="assets/img/project/password_addon.png" height="18" /> -->
+      <i class="fa fa-eye addon-img" (click)="isShowPassword = !isShowPassword" *ngIf="isShowPassword"></i>
+      <i class="fa fa-eye-slash addon-img" (click)="isShowPassword = !isShowPassword" *ngIf="!isShowPassword"></i>
       <!-- NOTE Errors -->
       <div class="invalid-feedback" *ngIf="formGroup.controls.password.hasError('required')">
         {{ 'FIELD_REQUIRED' | translate }}
