--- a/src/app/pages/auth/merchant/first-step/first-step.component.html
+++ b/src/app/pages/auth/merchant/first-step/first-step.component.html
@@ -4,14 +4,38 @@
     <label class="me-auto">*Mandatory</label>
 </div>
 <div class="col-7 mx-auto">
-    <div class="mb-3">
-        <label for="company_name" class="form-label text-secondary">Company Name*</label>
-        <input type="text" class="form-control" id="company_name" >
-    </div>
-    <div class="d-flex row">
-        <div class="col">
+    <div class="row">
+        <div class="col-lg-9">
             <div class="mb-3">
-                <label for="country_category" class="form-label text-secondary">Select Country*</label>
+                <label for="company_name" class="form-label text-secondary">Company Name*</label>
+                <input type="text" class="form-control" id="company_name" >
+            </div>
+            <div class="d-flex row">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="country_category" class="form-label text-secondary">Select Country*</label>
+                        <select class="form-select" id="country_category" aria-label="Default select example">
+                            <option selected></option>
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="city_category" class="form-label text-secondary">Select City*</label>
+                        <select class="form-select" id="city_category" aria-label="Default select example">
+                            <option selected></option>
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="country_category" class="form-label text-secondary">Category*</label>
                 <select class="form-select" id="country_category" aria-label="Default select example">
                     <option selected></option>
                     <option value="1"></option>
@@ -20,28 +44,16 @@
                 </select>
             </div>
         </div>
-        <div class="col">
-            <div class="mb-3">
-                <label for="city_category" class="form-label text-secondary">Select City*</label>
-                <select class="form-select" id="city_category" aria-label="Default select example">
-                    <option selected></option>
-                    <option value="1"></option>
-                    <option value="2"></option>
-                    <option value="3"></option>
-                </select>
+        <div class="col-lg-3">
+            <label class="form-label text-secondary">Upload Image</label>
+            <img [src]="preview" class="file-upload-preview" (click)="openDialog()" *ngIf="currentFile">
+            <div class="file-upload" (click)="openDialog()" *ngIf="!currentFile">
+                <i class="fa fa-upload" aria-hidden="true"></i>
             </div>
+            <input type="file" class="d-none" id="account_file" (change)="selectFile($event)" />
         </div>
     </div>
-    <div class="mb-3">
-        <label for="country_category" class="form-label text-secondary">Category*</label>
-        <select class="form-select" id="country_category" aria-label="Default select example">
-            <option selected></option>
-            <option value="1"></option>
-            <option value="2"></option>
-            <option value="3"></option>
-        </select>
-    </div>
-    <label class="text-dark mb-2">Address</label>
+    <label class="text-dark mb-2 mt-3">Address</label>
     <div class="mb-3">
         <label for="street_name" class="form-label text-secondary">Street*</label>
         <input type="text" class="form-control" id="street_name" >
