--- a/src/app/pages/auth/merchant/first-step/first-step.component.scss
+++ b/src/app/pages/auth/merchant/first-step/first-step.component.scss
@@ -22,3 +22,23 @@
         color: black;
     }
 }
+.file-upload {
+    width: 100%;
+    height: 221px;
+    text-align: center;
+    background: #f2f2f2;
+    cursor: pointer;
+    i {
+        margin-top: 75px;
+        font-size: 70px;
+        color: #9d9d9d;
+    }
+}
+.file-upload-preview {
+    width: 100%;
+    height: 221px;
+    cursor: pointer;
+    object-fit: cover;
+    border-radius: 10px;
+    // box-shadow: 0px 3px 6px black;
+}
