--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-page-layout [isLoading]="isLoading" [headerTheme]="'dark'">
-  <div class="container-fluid mt-2 mx-0 px-0" >
+  <div class="container-fluid mt-2 mx-0 px-0">
 
     <app-progress-bar *ngIf="isLoading"></app-progress-bar>
 
@@ -16,7 +16,8 @@
             & Snatch
           </div>
           <div class="d-grid mx-auto mt-3" [style.width]="'9rem'">
-            <image-button [text]="'play now'"></image-button>
+            <!-- <image-button [text]="'play now'" ></image-button> -->
+            <app-custom-button [text]="'Play now'" (onClickEvent)="onClickPlayNow($event)"></app-custom-button>
           </div>
           <div class="carousel-wrapper">
             <div id="slider">
@@ -220,9 +221,11 @@
             Three Ways To Win
           </h1>
           <div class="scroll-wrapper mx-3">
-            <drag-scroll #nav [scroll-x-wheel-enabled]="true">
-              <div class="container-fluid mb-5">
-                <div drag-scroll-item class="me-5 ms-3"  [style.width]="'290px'" [style.height]="'385px'">
+            <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="threeWaySlideConfig"
+              (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
+              (beforeChange)="beforeChange($event)">
+              <div ngxSlickItem class="slide px-4">
+                <div class="mx-auto" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
                     <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
@@ -237,7 +240,9 @@
                     </div>
                   </div>
                 </div>
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'290px'" [style.height]="'385px'">
+              </div>
+              <div ngxSlickItem class="slide px-4">
+                <div class="mx-auto" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
                     <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
@@ -252,7 +257,9 @@
                     </div>
                   </div>
                 </div>
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'290px'" [style.height]="'385px'">
+              </div>
+              <div  ngxSlickItem class="slide px-4">
+                <div class="mx-auto" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
                     <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
@@ -261,14 +268,15 @@
                         class="card-body-content flex-fill position-relative d-flex justify-content-center align-items-end">
                         <img src="assets/img/project/pick-card.png" class="three-game-image rounded-top rounded-4" />
                         <div class="mb-3" [style.width]="'9rem'">
-                          <image-button [text]="'play now'"  (onClick)="onHandleGoPickcard($event)"></image-button>
+                          <image-button [text]="'play now'" (onClick)="onHandleGoPickcard($event)"></image-button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </drag-scroll>
+              
+            </ngx-slick-carousel>
           </div>
         </div>
 
@@ -278,15 +286,15 @@
           <h1 class="text-white fw-900 py-4">
             New Reward Collections
           </h1>
-          <div class="scroll-wrapper pb-5 mb-5">
-            <drag-scroll #nav [scroll-x-wheel-enabled]="true">
-              <div class="container-fluid px-5">
-                <div drag-scroll-item class="px-2" [style.width]="'19rem'"
-                  *ngFor="let perNRewardItem of newRewardCollection$|async;" >
-                  <reward-collection-card [data]="perNRewardItem"></reward-collection-card>
-                </div>
+          <div class="scroll-wrapper pb-5 mb-5 px-4">
+            <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="newRewardCollectionSlideConfig"
+              (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
+              (beforeChange)="beforeChange($event)">
+              <div ngxSlickItem class="px-2 slide" [style.width]="'19rem'"
+                *ngFor="let perNRewardItem of newRewardCollection$|async;">
+                <reward-collection-card [data]="perNRewardItem"></reward-collection-card>
               </div>
-            </drag-scroll>
+            </ngx-slick-carousel>
           </div>
 
         </div>
@@ -296,20 +304,21 @@
           <h3 class="text-dark fw-900 py-4">
             The Process
           </h3>
-          <div class="scroll-wrapper pb-5">
-            <drag-scroll #nav [scroll-x-wheel-enabled]="true">
-              <div class="container-fluid mb-5">
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'22rem'">
-                  <process-card [type]="'lock'" [index]="1" [buttonText]="'sign up'" (onClickEvent)="onHanldeSignup($event)"></process-card>
-                </div>
-                <div drag-scroll-item class="mx-5" [style.width]="'22rem'">
-                  <process-card [type]="'finger'" [index]="2" [buttonText]="'play now'"></process-card>
-                </div>
-                <div drag-scroll-item class="mx-5" [style.width]="'22rem'">
-                  <process-card [index]="3" [buttonText]="'Manage \n Rewards'"></process-card>
-                </div>
+          <div class="scroll-wrapper pb-5 ps-5">
+            <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig"
+              (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
+              (beforeChange)="beforeChange($event)">
+              <div ngxSlickItem class="me-5 ms-5 slide" [style.width]="'22rem'">
+                <process-card [type]="'lock'" [index]="1" [buttonText]="'sign up'"
+                  (onClickEvent)="onHanldeSignup($event)"></process-card>
               </div>
-            </drag-scroll>
+              <div ngxSlickItem class="mx-5 slide" [style.width]="'22rem'">
+                <process-card [type]="'finger'" [index]="2" [buttonText]="'play now'"></process-card>
+              </div>
+              <div ngxSlickItem class="mx-5 slide" [style.width]="'22rem'">
+                <process-card [index]="3" [buttonText]="'Manage \n Rewards'"></process-card>
+              </div>
+            </ngx-slick-carousel>
           </div>
         </div>
 
@@ -318,15 +327,14 @@
           <h1 class="fw-900 py-4">
             New Reward Drops
           </h1>
-          <div class="scroll-wrapper pb-5">
-            <drag-scroll #nav [scroll-x-wheel-enabled]="true">
-              <div class="container-fluid px-5">
-                <div drag-scroll-item class="mx-2" [style.width]="'19rem'"
-                  *ngFor="let perRewardDrop of newRewardDropped$ | async;">
-                  <reward-drop-card [data]="perRewardDrop"></reward-drop-card>
-                </div>
+          <div class="scroll-wrapper pb-5 ps-5">
+            <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig"
+              (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
+              (beforeChange)="beforeChange($event)">
+              <div ngxSlickItem *ngFor="let perRewardDrop of newRewardDropped$ | async;" class="slide me-3">
+                <reward-drop-card [data]="perRewardDrop"></reward-drop-card>
               </div>
-            </drag-scroll>
+            </ngx-slick-carousel>
           </div>
 
           <div class="mx-auto my-3" [style.width]="'12rem'">
