--- a/src/app/pages/merchant/dynamics/dynamics.component.html
+++ b/src/app/pages/merchant/dynamics/dynamics.component.html
@@ -1,4 +1,7 @@
-<div class="row m-0 px-0 py-5">
+<div class="row m-0 px-0 py-5"
+(mouseup)="onMouseUpIndicator($event)" 
+(mousemove)="onMouseMoveIdicator($event)"
+>
     <div class="col-md-8 col-xs-12 d-flex flex-column">
         <div class="mb-3 ms-3" [ngStyle]="{'width.rem' : 15}">
             <label for="total_number_draw" class="form-label">Total Number of Draws(Reward)</label>
@@ -9,15 +12,17 @@
                 <option value="3">{{3000 | number}}</option>
             </select>
         </div>
-        <div
-            class="progressbar-wrapper px-3 position-relative d-flex flex-column justify-content-center col-10 me-auto">
-            <div class="progress">
-                <div class="progress-bar text-end" role="progressbar" style="width: 25%;" aria-valuenow="500"
-                    aria-valuemin="10" aria-valuemax="100">
+        <div class="progressbar-wrapper ps-3 position-relative d-flex flex-column justify-content-center col-10 me-auto"
+            id="progressbar_wrapper">
+            <div class="progress" id="progressbar">
+                <div class="progress-bar text-end" role="progressbar" [ngStyle]="{'width.%': progressbarValue}"
+                    [attr.aria-valuenow]="progressbarValue">
                 </div>
             </div>
-            <span class="badge drawnumber-indicator text-center "
-                [ngStyle]="{'left.%' : 25, 'font-size.px' : 18}">2500</span>
+            <span class="badge drawnumber-indicator text-center cursor-pointer" id="indicator"
+                [ngStyle]="{'left.%' : progressbarValue, 'font-size.px' : 18, 'user-select': 'none'}" 
+                (mousedown)="onMouseDownIndicator($event)" 
+                >{{progressvarIndicatorValue}}</span>
             <div class="label-indicator-wrapper d-flex ps-3">
                 <div class="min-label me-auto">
                     10
@@ -34,12 +39,11 @@
     </div>
     <div class="col-md-4 col-xs-12">
         <div class="card text-center py-0 rounded-4 border-0 shadow my-0 info-wrapper">
-            <div class="card-header bg-white border-0 py-4">
+            <div class="card-header bg-white border-0 py-4" [ngStyle]="{'font-family': 'app_font'}">
                 Number of Draws(Rewards)*
             </div>
             <div class="card-body p-0">
-                <div class="alert rounded-0 border-0 text-center collection-detail-alert mb-0"
-                    role="alert">
+                <div class="alert rounded-0 border-0 text-center collection-detail-alert mb-0" role="alert">
                     <div class="info text-secondary fw-900">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque unde molestiae iusto quaerat
                         illo rerum, tempora dicta corporis cupiditate necessitatibus magnam
