--- a/src/app/pages/merchant/information/information.component.html
+++ b/src/app/pages/merchant/information/information.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-4 col-xs-12">
         <div class="card text-center py-0 rounded-4 border-0 shadow my-0">
-            <div class="card-header bg-white border-0 py-4">
+            <div class="card-header bg-white border-0 py-4" [ngStyle]="{'font-family': 'app_font'}">
                 Collection Type Details*
             </div>
             <div class="card-body p-0">
