--- a/src/app/pages/merchant/rewards/select-number-reward/select-number-reward.component.html
+++ b/src/app/pages/merchant/rewards/select-number-reward/select-number-reward.component.html
@@ -1,8 +1,9 @@
-<div class="row m-0 px-0 py-5">
+<div class="row m-0 px-0 py-5" (mouseup)="onMouseUpIndicator($event)" (mousemove)="onMouseMoveIdicator($event)">
     <div class="col-md-12 col-lg-8 col-xl-8 col-xs-12 col-sm-12 d-flex flex-column">
         <div class="d-flex flex-wrap mb-3 px-2">
             <label *ngFor="let perTab of tabData; let i =index;">
-                <div class="reward-tab py-2 px-2 rounded-2 me-2" (click)="onHanldeTransitionTab(i)" [ngClass]="{'active' : i == selectedRewardStepIndex}">
+                <div class="reward-tab py-2 px-2 rounded-2 me-2" (click)="onHanldeTransitionTab(i)"
+                    [ngClass]="{'active' : i == selectedRewardStepIndex}">
                     {{perTab.title}}</div>
             </label>
 
@@ -17,18 +18,18 @@
             </select>
         </div>
         <div
-            class="progressbar-wrapper px-3 position-relative d-flex flex-column justify-content-center col-10 me-auto">
-            <div class="progress">
-                <div class="progress-bar text-end" role="progressbar" style="width: 25%;" aria-valuenow="50"
-                    aria-valuemin="10" aria-valuemax="500">
+            class="progressbar-wrapper ps-3 position-relative d-flex flex-column justify-content-center col-10 me-auto">
+            <div class="progress" id="progressbar">
+                <div class="progress-bar text-end" role="progressbar" [ngStyle]="{'width.%': progressbarValue}"
+                    [attr.aria-valuenow]="progressbarValue" aria-valuemin="10" aria-valuemax="500">
                 </div>
             </div>
-            <div class="totalnumber-indicator text-center" [ngStyle]="{'left.%' : 25, 'font-size.px' : 18}">
-                <span class="text-center text-white">50</span>
+            <div class="totalnumber-indicator text-center" [ngStyle]="{'left.%' : progressbarValue, 'font-size.px' : 18, 'user-select': 'none'}" (mousedown)="onMouseDownIndicator($event)">
+                <span class="text-center text-white">{{progressvarIndicatorValue}}</span>
                 <label>(10 % of Total Collection)</label>
             </div>
 
-            <div class="label-indicator-wrapper d-flex ps-3 pe-2">
+            <div class="label-indicator-wrapper d-flex ps-3">
                 <div class="min-label me-auto">
                     10
                 </div>
