--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-page-layout [isLoading]="isLoading" [headerTheme]="'dark'">
+<app-page-layout [isLoading]="isLoading" [headerTheme]="'dark'" [isMegaReward]="true">
   <div class="container-fluid mt-2 mx-0 px-0">
 
     <app-progress-bar *ngIf="isLoading"></app-progress-bar>
