--- a/src/app/pages/market-place/market-place.component.html
+++ b/src/app/pages/market-place/market-place.component.html
@@ -1,4 +1,4 @@
-<app-page-layout [headerTheme]="'light'">
+<app-page-layout [headerTheme]="'light'" [isMegaReward]="true">
     <div class="container-fluid market-place-content">
         <app-toolbar-action (onToggleAction)="onToggleFilter($event)" [isSearchPanelShow]="isShowSearchAction"></app-toolbar-action>
         <div class="row">
