--- a/src/app/shared/components/layouts/page-layout/page-layout.component.html
+++ b/src/app/shared/components/layouts/page-layout/page-layout.component.html
@@ -1,4 +1,4 @@
-<app-layout-header [theme]="headerTheme">
+<app-layout-header [theme]="headerTheme" [isMegaReward]="isMegaReward">
 
   <div class="main-container">
     <ng-content></ng-content>
