update some css in pick card game

--- a/src/app/pages/game/pick/pick.component.html
+++ b/src/app/pages/game/pick/pick.component.html
@@ -83,13 +83,13 @@
             <div class="position-relative">
                 <img src="assets/img/project/game/snatch/coin.png" (click)="onResetPick()" />
                 <div class="expanded-fab lightning opacity-0" (click)="onClickLightning()">
-                    <div class="inner-item d-flex justify-content-center align-items-center">Lighiting</div>
+                    <div class="inner-item d-flex justify-content-center align-items-center"><img src="assets/img/project/game/pick/finger.svg" class="game-card-action-icon" /></div>
                 </div>
                 <div class="expanded-fab refresh opacity-0" (click)="onClickRefresh()">
-                    <div class="inner-item d-flex justify-content-center align-items-center">Lighiting</div>
+                    <div class="inner-item d-flex justify-content-center align-items-center"><img src="assets/img/project/game/pick/power.svg" class="game-card-action-icon" /></div>
                 </div>
                 <div class="expanded-fab turn opacity-0" (click)="onClickTurning()">
-                    <div class="inner-item d-flex justify-content-center align-items-center">Lighiting</div>
+                    <div class="inner-item d-flex justify-content-center align-items-center"><img src="assets/img/project/game/pick/redo.svg" class="game-card-action-icon" /></div>
                 </div>
             </div>
         </div>
